// Vitest Snapshot v1

exports[`Roadmap.org > top paragraph > wraps a single text in a paragraph object 1`] = `
{
  "content": [
    {
      "content": "⚠️ All points in this roadmap are listed in their relative order of importance. In case points get reordered in this document, it should be interpreted as a change in prioritization. Points are ordered by highest priority first.
",
      "type": "t",
    },
  ],
  "type": "p",
}
`;

exports[`extractFormattedText > returns code 1`] = `
[
  {
    "content": "Something ",
    "type": "t",
  },
  {
    "content": "funny",
    "type": "c",
  },
]
`;

exports[`extractFormattedText > returns with formatting 1`] = `
[
  {
    "content": "Hello ",
    "type": "t",
  },
  {
    "content": [
      {
        "content": "bold",
        "type": "t",
      },
      {
        "content": [
          {
            "content": "twelve",
            "type": "t",
          },
        ],
        "type": "_",
      },
    ],
    "type": "b",
  },
  {
    "content": ", ",
    "type": "t",
  },
  {
    "content": [
      {
        "content": "italic",
        "type": "t",
      },
    ],
    "type": "i",
  },
  {
    "content": ", ",
    "type": "t",
  },
  {
    "content": [
      {
        "content": "strikethrough",
        "type": "t",
      },
    ],
    "type": "+",
  },
  {
    "content": " and ",
    "type": "t",
  },
  {
    "content": [
      {
        "content": "underline",
        "type": "t",
      },
    ],
    "type": "u",
  },
]
`;

exports[`heading > tree > extracts all headings 1`] = `
[
  [
    {
      "commented": false,
      "content": [
        {
          "content": "A",
          "type": "t",
        },
      ],
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "A",
  ],
  [
    {
      "commented": false,
      "content": [
        {
          "content": "A1",
          "type": "t",
        },
      ],
      "level": 2,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "A1",
  ],
  [
    {
      "commented": false,
      "content": [
        {
          "content": "A2",
          "type": "t",
        },
      ],
      "level": 2,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "A2",
  ],
  [
    {
      "commented": false,
      "content": [
        {
          "content": "B",
          "type": "t",
        },
      ],
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "B",
  ],
  [
    {
      "commented": false,
      "content": [
        {
          "content": "C",
          "type": "t",
        },
      ],
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "C",
  ],
  [
    {
      "commented": false,
      "content": [
        {
          "content": "D",
          "type": "t",
        },
      ],
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "D",
  ],
  [
    {
      "commented": false,
      "content": [
        {
          "content": "D1",
          "type": "t",
        },
      ],
      "level": 3,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "D1",
  ],
  [
    {
      "commented": false,
      "content": [
        {
          "content": "Dx",
          "type": "t",
        },
      ],
      "level": 9,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "Dx",
  ],
  [
    {
      "commented": false,
      "content": [
        {
          "content": "E",
          "type": "t",
        },
      ],
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "E",
  ],
  [
    {
      "commented": false,
      "content": [
        {
          "content": "E1",
          "type": "t",
        },
      ],
      "level": 2,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "E1",
  ],
]
`;

exports[`heading > tree > extracts top-level headings only 1`] = `
[
  [
    {
      "commented": false,
      "content": [
        {
          "content": "A",
          "type": "t",
        },
      ],
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "A",
  ],
  [
    {
      "commented": false,
      "content": [
        {
          "content": "B",
          "type": "t",
        },
      ],
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "B",
  ],
  [
    {
      "commented": false,
      "content": [
        {
          "content": "C",
          "type": "t",
        },
      ],
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "C",
  ],
  [
    {
      "commented": false,
      "content": [
        {
          "content": "D",
          "type": "t",
        },
      ],
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "D",
  ],
  [
    {
      "commented": false,
      "content": [
        {
          "content": "E",
          "type": "t",
        },
      ],
      "level": 1,
      "priority": null,
      "tags": [],
      "todoKeyword": null,
      "type": "h",
    },
    "E",
  ],
]
`;
